[package]
name = "pi_triangulation"
version = "0.1.0"
authors = ["yineng <dev@dev.com>"]
edition = "2021"
description = "triangulation"
repository = "https://github.com/GaiaWorld/pi_triangulation.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "triangulation"]


[dependencies]
num-traits = "0.2.14"